Fixed alignment of post meta.

--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ article {
 }
 .entry-header {
   margin: 0;
+  padding: 0 20px;
 }
 .entry-summary {
   margin: 0;
@@ -380,7 +381,7 @@ blockquote cite:before {
 h2.entry-title {
   font-weight: 400;
   line-height: 1.2em;
-  margin: 15px 20px 0px 20px;
+  margin-bottom: 2px;
 }
 h2.entry-title a {
   color: #333333;
